# c8

./: Cargo.toml  README.md  prog.c8asm
assembler/: Cargo.toml
assembler/src/: diagnostics.rs  encode.rs  layout.rs  lib.rs  parser.rs
assembler/src/parser/: lexer.rs  token.rs
src/: cpu.rs  display.rs  keyboard.rs  main.rs
