[package]
name = "c8"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.4"
rand = "0.8.5"
sdl2 = "0.36.0"

[features]
default = ["modern-ls"]

# Use the "modern" implementation of the shift instructions used
# in the CHIP-48 and SUPER-CHIP.
modern-shift = []

# Use the "modern" Jump With Offset implementation used in the
# CHIP-48 and SUPER-CHIP.
modern-jwo = []

# Use the "modern" implementations of the load and store instructions
# used in the CHIP-48 and SUPER-CHIP.
modern-ls = []

# Use the "modern" implementations of ambiguous instructions.
modern = ["modern-shift", "modern-jwo", "modern-ls"]
